--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
           <p>Chile's finest wines on a human scale.</p>
           <a href="#">LEARN MORE</a>
         </div>
-        <img src="./assets/images/WineBG.png" alt="" />
       </div>
     </header>
+
     <main>
       <section>
         <h2>MOVI in numbers</h2>
@@ -67,14 +67,11 @@
           </div>
         </div>
 
-        <div class="break">
-          <img src="./assets/images/wine.png" alt="Wine bottle sideways" />
-        </div>
+        <div class="break"></div>
 
+        <h2>Brands that are part</h2>
+        <p>Made with love</p>
         <div class="main_section-sponsors">
-          <h2>Brands that are part</h2>
-          <p>Made with love</p>
-
           <div class="sponsors">
             <div class="brand">
               <img
@@ -106,8 +103,14 @@
           </div>
         </div>
       </section>
+
       <section>
         <h2>MOVI prochile</h2>
+        <div class="main_section-map--mobile">
+          <img src="./assets/images/BR.png" alt="" />
+          <img src="./assets/images/AM.png" alt="" />
+          <img src="./assets/images/PE.png" alt="" />
+        </div>
         <div class="main_section-map">
           <img src="./assets/images/Map.png" alt="World map" />
         </div>
@@ -171,6 +174,7 @@
         </div>
       </section>
     </main>
+
     <footer>
       <div class="footer_links">
         <div class="about">
@@ -207,13 +211,93 @@
       </div>
 
       <div class="footer_socials">
-        <a href=""><img src="./assets/images/logo.png" alt="Movi logo"></a>
+        <a href=""><img src="./assets/images/logo.png" alt="Movi logo" /></a>
         <div class="social">
-            <a href="#"><img src="./assets/images/Instagram.png" alt="Instagram logo"></a>
-            <a href="#"><img src="./assets/images/Facebook.png" alt="Facebook logo"></a>
-            <a href="#"><img src="./assets/images/Youtube.png" alt="Youtube logo"></a>
-            <a href="#"><img src="./assets/images/Twitter.png" alt="Twitter logo"></a>
-            <a href="#"><img src="./assets/images/Linkedn.png" alt="Linkedn logo"></a>
+          <a href="#"
+            ><img src="./assets/images/Instagram.png" alt="Instagram logo"
+          /></a>
+          <a href="#"
+            ><img src="./assets/images/Facebook.png" alt="Facebook logo"
+          /></a>
+          <a href="#"
+            ><img src="./assets/images/Youtube.png" alt="Youtube logo"
+          /></a>
+          <a href="#"
+            ><img src="./assets/images/Twitter.png" alt="Twitter logo"
+          /></a>
+          <a href="#"
+            ><img src="./assets/images/Linkedn.png" alt="Linkedn logo"
+          /></a>
+        </div>
+      </div>
+      <div class="footer_links-mobile">
+        <details class="about">
+          <summary>About MOVI</summary>
+          <a class="first" href="">Who we are</a>
+          <a href="">How it works</a>
+          <a href="">Work with us</a>
+          <a href="">Media</a>
+          <a href="">Blog</a>
+        </details>
+
+        <details class="Services">
+          <summary>Services</summary>
+          <a class="first" href="">Premium club</a>
+          <a href="">Visit the wineries</a>
+          <a href="">Exclusive wines</a>
+        </details>
+
+        <details class="talk">
+          <summary>Talk to Us</summary>
+          <p>You consulted our SAC and still need help?</p>
+          <span>helpme@movichle.com</span>
+          <p>Attendance from 9AM to 6PM (working days)</p>
+        </details>
+        <div class="footer_socials">
+          <div class="social">
+            <a href="#"
+              ><img src="./assets/images/Instagram.png" alt="Instagram logo"
+            /></a>
+            <a href="#"
+              ><img src="./assets/images/Facebook.png" alt="Facebook logo"
+            /></a>
+            <a href="#"
+              ><img src="./assets/images/Youtube.png" alt="Youtube logo"
+            /></a>
+            <a href="#"
+              ><img src="./assets/images/Twitter.png" alt="Twitter logo"
+            /></a>
+            <a href="#"
+              ><img src="./assets/images/Linkedn.png" alt="Linkedn logo"
+            /></a>
+          </div>
+        </div>
+        <div class="social">
+          <a href="#"
+            ><img src="./assets/images/Instagram.png" alt="Instagram logo"
+          /></a>
+          <a href="#"
+            ><img src="./assets/images/Facebook.png" alt="Facebook logo"
+          /></a>
+          <a href="#"
+            ><img src="./assets/images/Youtube.png" alt="Youtube logo"
+          /></a>
+          <a href="#"
+            ><img src="./assets/images/Twitter.png" alt="Twitter logo"
+          /></a>
+          <a href="#"
+            ><img src="./assets/images/Linkedn.png" alt="Linkedn logo"
+          /></a>
+        </div>
+        <div class="apps">
+          <a href=""
+            ><img
+              src="./assets/images/GooglePlay.png"
+              alt="GooglePlay app link"
+          /></a>
+          <a href=""
+            ><img src="./assets/images/AppStore.png" alt="AppStore app link"
+          /></a>
         </div>
       </div>
 
