--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
 
         <details class="talk">
           <summary>Talk to Us</summary>
-          <p>You consulted our SAC and still need help?</p>
+          <p class="first">You consulted our SAC and still need help?</p>
           <span>helpme@movichle.com</span>
           <p>Attendance from 9AM to 6PM (working days)</p>
         </details>
